Do not hardcode entries and source host in mock
* Use hostname of localhost if host not found and equal to localhost
  instead of hardcoded name for tests