@@ -1,11 +1,12 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.config.model.application.provider;
 
+import com.yahoo.config.FileReference;
 import com.yahoo.config.application.api.FileRegistry;
 import org.junit.Test;
 
 import java.io.StringReader;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
@@ -14,27 +15,22 @@ import static org.junit.Assert.assertTrue;
  * @author Tony Vaagenes
  */
 public class PreGeneratedFileRegistryTestCase {
+
     @Test
     public void importAndExport() {
         FileRegistry fileRegistry = new MockFileRegistry();
+        fileRegistry.addFile("1234");
         String serializedRegistry = PreGeneratedFileRegistry.exportRegistry(fileRegistry);
 
-        PreGeneratedFileRegistry importedRegistry =
-                PreGeneratedFileRegistry.importRegistry(
-                        new StringReader(serializedRegistry));
+        PreGeneratedFileRegistry importedRegistry = PreGeneratedFileRegistry.importRegistry(new StringReader(serializedRegistry));
 
-        assertTrue(importedRegistry.getPaths().containsAll(
-                Arrays.asList(
-                        MockFileRegistry.entry1.relativePath,
-                        MockFileRegistry.entry2.relativePath)));
+        FileReference fileReference = new FileReference("1234");
+        assertTrue(importedRegistry.getPaths().containsAll(List.of("1234", fileReference)));
 
-        assertEquals(2, importedRegistry.getPaths().size());
+        assertEquals(1, importedRegistry.getPaths().size());
 
-        checkConsistentEntry(MockFileRegistry.entry1, importedRegistry);
-        checkConsistentEntry(MockFileRegistry.entry2, importedRegistry);
-
-        assertEquals(fileRegistry.fileSourceHost(),
-                importedRegistry.fileSourceHost());
+        checkConsistentEntry(fileRegistry.export().get(0), importedRegistry);
+        assertEquals(fileRegistry.fileSourceHost(), importedRegistry.fileSourceHost());
     }
 
     void checkConsistentEntry(FileRegistry.Entry entry, FileRegistry registry) {
